--- a/style.css
+++ b/style.css
@@ -2,12 +2,52 @@ h2{
     color:DodgerBlue;
 }
 h1{
-    color: darkblue;
-    border: dimgray 3px;
-    border-style: dashed;
+    color: #00008b;
+    font-family: Microsoft JhengHei;
 }
 img { 
     border: 10px solid transparent;
     padding: 15px;
-    border-image: url(border.png) 30 stretch;
+    width: 600px ;
+    height: 400px;
+    
+}
+.header{
+    background-color: #ffffff;
+}
+.footer{
+    background-color: rgb(2, 55, 107);
+    color: white;
+    text-align: center;
+
+    font-size: 30;
+    font-family: Microsoft JhengHei;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.allprojects{
+    border: solid black;
+    display: flex;
+    flex-wrap:wrap;
+    
+    justify-content: space-evenly;
+    align-items: flex-end;
+    padding: 15px;
+    background-color: #7ebaff1f;
+    margin-bottom: 30px;
+    
+}
+.projects{
+    border: dashed grey;
+    margin-top: 30px;
+    background-color: #7ebaff80;
+    
+}
+.links{
+    padding-left: 55px;
+    padding-bottom: 25px;
+    font-family: Microsoft JhengHei;
+    font-size: 30px;
+    
 }
